[package]
name = "conduit-hyper"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]

[dependencies]
conduit = "0.8"
futures = "0.1"
futures-cpupool = "0.1"
log = "0.3"
semver = "0.5"
unicase = "1.4"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper"
branch = "master"
default_features = false
